# Reconstruction

./: .gitignore  CMakeLists.txt  README.md  TODO.md  TODO.txt  leftovers.cpp  main.cpp  main_disk.cpp  main_ip_camera.cpp  main_render.cpp  main_retrieval_seq.cpp  main_retrieval_test.cpp  main_viewer.cpp  main_webcam.cpp
bak/: CMakeLists_1.txt  CMakeLists_2.txt  CMakeLists_3.txt  main_bak_1.cpp  main_bak_2.cpp  main_bak_3.cpp  main_bak_4.cpp
castle_reconstruction/: reconstruction.ply
cmake/: FindLIBIGL.cmake
dataset/castle_images/: K.txt
dataset/castle_reconstruction/: mesh.ply  prior_calibration.txt  reconstruction_sehrgut.ply
dataset/flasa_reconstruction/: prior_calibration.txt
dataset/vrc_reconstruction/: mesh.mtl  mesh.ply  sparse_point_cloud.ply
dataset/webcam_reconstruction/: mesh.mvs  mesh.ply
libraries/: CMakeLists.txt
libraries/CudaSift/: CMakeLists.txt
libraries/imguizmo/: CMakeLists.txt  ImGuizmo.cpp
libraries/nelder_mead/: CMakeLists.txt  nelder_mead.cpp  nelder_mead.h
libraries/stb/: CMakeLists.txt
libraries/webcam/: CMakeLists.txt  webcam.h
logs/extend_timing/: put4_vocabtree.txt  sod_allpairs.txt  sod_vocabtree_1.txt  sod_vocabtree_2.txt
logs/retrieval_result/: colmap.txt  popsift.txt  siftgpu_2000.txt  siftgpu_5000.txt
retrieval_result/: SiftGPU_all_features.txt  siftgpu_5000_update.txt  siftgpu_update.txt
src/: CMakeLists.txt  CameraPlugin.cpp  CameraPlugin.h  CudaSiftDescriptorExtractor.cpp  EditMeshPlugin.cpp  EditMeshPlugin.h  MenuPlugin.cpp  MenuPlugin.h  PopSiftDescriptorExtractor.cpp  PopSiftDescriptorExtractor.h  RealtimeFeatureMatcher.h  RealtimeReconstructionBuilder.cpp  RealtimeReconstructionBuilder.h  ReconstructionPlugin.cpp  ReconstructionPlugin.h  helpers.cpp  helpers.h  realtime_reconstruction_builder.cpp  realtime_reconstruction_builder.h
src/nbv/: CMakeLists.txt  FaceIdMesh.cpp  FaceIdMesh.h  Helpers.h  HelpersOptim.h  MeasureMesh.cpp  MeasureMesh.h  NextBestView.cpp  NextBestView.h  OpenGLMesh.cpp  OpenGLMesh.h  QualityMeasure.cpp  QualityMeasure.h  SourceShader.h
src/plugins/: CMakeLists.txt  CameraPlugin.cpp  CameraPlugin.h  EditMeshPlugin.cpp  EditMeshPlugin.h  IPCameraPlugin.cpp  IPCameraPlugin.h  LocalizationPlugin.cpp  LocalizationPlugin.h  NextBestViewPlugin.cpp  NextBestViewPlugin.h  ReconstructionPlugin.cpp  ReconstructionPlugin.h  RenderPlugin.cpp  RenderPlugin.h  ViewMeshPlugin.cpp  ViewMeshPlugin.h  WebcamPlugin.cpp  WebcamPlugin.h
src/reconstruction/: CMakeLists.txt  CudaSiftDescriptorExtractor.h  Helpers.cpp  Helpers.h  ImageRetrieval.cpp  ImageRetrieval.h  PopSiftDescriptorExtractor.cpp  PopSiftDescriptorExtractor.h  RealtimeFeatureMatcher.cpp  RealtimeFeatureMatcher.h  RealtimeReconstructionBuilder.cpp  RealtimeReconstructionBuilder.h  SiftGpuDescriptorExtractor.cpp  SiftGpuDescriptorExtractor.h
src/render/: CMakeLists.txt  Render.cpp  Render.h  RenderStats.cpp  RenderStats.h  TexturedMesh.h
src/util/: CMakeLists.txt  Helpers.h  IPCameraStats.cpp  IPCameraStats.h
webcam_reconstruction/: prior_calibration.txt
